# vacs-data

./: README.md
.github/: CODEOWNERS
.github/workflows/: release-tools.yml
dataset/VH/: positions.json  stations.json
dataset/VH/profiles/: VHHK.json
docs/dataset/: stations.md
docs/schemas/: positions.schema.json  profiles.schema.json  stations.schema.json
tools/: Cargo.toml
tools/cli/: Cargo.toml
tools/cli/src/: cli.rs  main.rs
tools/euroscope/: Cargo.toml
tools/euroscope/src/: lib.rs  types.rs
tools/importer/src/: euroscope.rs  lib.rs  vatglasses.rs
