[package]
name = "vacs-data-euroscope"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
encoding_rs = { workspace = true }
encoding_rs_io = { workspace = true }
toml = { workspace = true }
vacs-data-diagnostics = { workspace = true }
vacs-protocol = { workspace = true }
vacs-vatsim = { workspace = true }
